Fix z-index

--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -15,6 +15,7 @@ html {
 }
 
 #panel-toggle{
+  z-index: 10;
   display: flex;
   align-items: center; /* Vertical center alignment */
   justify-content: center;
@@ -52,6 +53,7 @@ html {
   #canvas {
     flex-grow: 1;
     position: relative;
+    margin-right: -25px;
   }
 
   #properties-panel {
